-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0-beta1
-
-
dcbf26490d485c91c4475de8233b4ab1ffe705ea (qt-creator/qt-creator/master) 9a9b4080aef9cb1192ba6183d9fef23400394f19 (qt-creator/qt-creator/4.15)
Maybe, this is premature false alarm, but it could be something that needs to be fixed.
Building qmlpuppet against Qt 6.2, currently breaks like this:
C:\PROGRA~2\MICROS~1\2019\COMMUN~1\VC\Tools\MSVC\1428~1.299\bin\HostX64\x64\cl.exe /nologo /TP -DIMPORT_QUICK3D_ASSETS -DQT_CORE_LIB -DQT_CREATOR -DQT_DISABLE_DEPRECATED_BEFORE=0x050900 -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_JAVA_STYLE_ITERATORS -DQT_OPENGL_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK3DASSETIMPORT_LIB -DQT_QUICK3DRUNTIMERENDER_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK3D_LIB -DQT_QUICK_LIB -DQT_RESTRICTED_CAST_FROM_ASCII -DQT_SHADERTOOLS_LIB -DQT_TESTCASE_BUILDDIR=\"C:/Users/alportal/dev/tqtc-qtc-super/build-qtcreator-Qt_6_2_0_win32_msvc-Debug/src/tools/qml2puppet\" -DQT_TESTCASE_SOURCEDIR=\"C:/Users/alportal/dev/tqtc-qtc-super/qtcreator/src/tools/qml2puppet\" -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DQUICK3D_MODULE -DRELATIVE_DATA_PATH=\"../share/qtcreator\" -DRELATIVE_DOC_PATH=\"../share/doc/qtcreator\" -DRELATIVE_LIBEXEC_PATH=\"\" -DRELATIVE_PLUGIN_PATH=\"../lib/qtcreator/plugins\" -DSRCDIR=\"C:/Users/alportal/dev/tqtc-qtc-super/qtcreator/src/tools/qml2puppet\" -DUNICODE -DWIN32 -DWIN32_LEAN_AND_MEAN -DWIN64 -DWINVER=0x0602 -DWITH_TESTS -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN32_WINNT=0x0602 -D_WIN64 -Isrc\tools\qml2puppet -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\tools\qml2puppet -Isrc\tools\qml2puppet\qml2puppet_autogen\include -Isrc -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\instances -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\qt5compat -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\iconrenderer -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\import3d -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\instances -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\types -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qmlprivategate -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\interfaces -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\container -IC:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\commands -IC:\Users\alportal\dev\qt6_desktop\qtbase\src\corelib -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtCore\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtCore\6.2.0\QtCore -IC:\Users\alportal\dev\qt6_desktop\qtbase\include -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtCore -IC:\Users\alportal\dev\qt6_desktop\qtbase\mkspecs\win32-msvc -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtWidgets -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtGui -IC:\Users\alportal\dev\qt6_desktop\qtdeclarative\src\qml -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQml\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQml\6.2.0\QtQml -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQml -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtNetwork -IC:\Users\alportal\dev\qt6_desktop\qtdeclarative\src\quick -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick\6.2.0\QtQuick -IC:\Users\alportal\dev\qt6_desktop\qtbase\src\gui -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtGui\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtGui\6.2.0\QtGui -IC:\Users\alportal\dev\qt6_desktop\qtdeclarative\src\qmlmodels -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQmlModels\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQmlModels\6.2.0\QtQmlModels -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQmlModels -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtOpenGL -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtTest -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3D -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DRuntimeRender -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DUtils -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtShaderTools -IC:\Users\alportal\dev\qt6_desktop\qtquick3d\src\quick3d -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3D\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3D\6.2.0\QtQuick3D -IC:\Users\alportal\dev\qt6_desktop\qtquick3d\src\runtimerender -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DRuntimeRender\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DRuntimeRender\6.2.0\QtQuick3DRuntimeRender -IC:\Users\alportal\dev\qt6_desktop\qtquick3d\src\utils -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DUtils\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DUtils\6.2.0\QtQuick3DUtils -IC:\Users\alportal\dev\qt6_desktop\qtshadertools\src\shadertools -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtShaderTools\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtShaderTools\6.2.0\QtShaderTools -IC:\Users\alportal\dev\qt6_desktop\qtquick3d\src\assetimport -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DAssetImport\6.2.0 -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DAssetImport\6.2.0\QtQuick3DAssetImport -IC:\Users\alportal\dev\qt6_desktop\qtbase\include\QtQuick3DAssetImport /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -Zc:__cplusplus -permissive- -utf-8 -std:c++17 /showIncludes /Fosrc\tools\qml2puppet\CMakeFiles\qml2puppet.dir\__\__\__\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\qt5compat\qquick3darealight.cpp.obj /Fdsrc\tools\qml2puppet\CMakeFiles\qml2puppet.dir\ /FS -c C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\qt5compat\qquick3darealight.cpp C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\share\qtcreator\qml\qmlpuppet\qml2puppet\editor3d\qt5compat\qquick3darealight_p.h(43): error C2512: 'QQuick3DAbstractLight::QQuick3DAbstractLight': no appropriate default constructor available