QmlPuppet: Fix build with Qt 6.2

Fixes: QTCREATORBUG-25763
Change-Id: I05f4b44a3793c41fd1c6812f40f6603892cdac50
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>